plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    // Include resources generated by data generators.
    srcDir('src/generated/resources')

    // Exclude common development only resources from finalized outputs
    exclude("**/*.bbmodel") // BlockBench project files
    exclude("src/generated/**/.cache") // datagen cache files
}

repositories {
    mavenCentral()

    repositories {
        exclusiveContent {
            forRepository {
                maven {
                    url "https://cursemaven.com"
                }
            }
            filter {
                includeGroup "curse.maven"
            }
        }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

def infxTestMode = providers.systemProperty('infx.testMode')

neoForge {
    version = project.neo_version

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Forward the optional development escape hatch to the launched Minecraft JVM.
            if (infxTestMode.isPresent()) {
                systemProperty 'infx.testMode', infxTestMode.get()
            }

            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    // Put Minecraft/NeoForge on the JUnit classpath so focused compatibility
    // tests can exercise recipe wrappers without starting a GameTest server.
    unitTest {
        testedMod = mods.getByName(mod_id)
        enable()
    }
}

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.13.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JEI 29.6.2.31 is the 26.1.2/NeoForge-compatible API build.
    compileOnly "curse.maven:jei-238222:8108851"
    localRuntime "curse.maven:jei-238222:8108851"
    testImplementation "curse.maven:jei-238222:8108851"
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.named('test', Test).configure {
    useJUnitPlatform {
        excludeTags 'generated-resources'
    }
}

tasks.register('resourceTest', Test) { resourceTest ->
    def unitTest = tasks.named('test', Test).get()
    unitTest.copyTo(resourceTest)
    resourceTest.jvmArgumentProviders.addAll(unitTest.jvmArgumentProviders)
    // resourceTest reads src/generated/resources from disk; that tree is gitignored, so a
    // fresh worktree (missing files) or a checkout that just pulled datagen-affecting
    // changes (stale files) fails spuriously unless runData regenerates it first.
    dependsOn tasks.named('downloadAssets'), tasks.named('prepareNeoForgeTestFiles'), tasks.named('runData')
    description = 'Validates resources produced by runData.'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'generated-resources'
    }
}

tasks.named('check').configure {
    dependsOn tasks.named('resourceTest')
}

// processResources / plain Copy merge into build/resources/main and never delete removed
// generated files. After runData (HashCache drops stale src/generated outputs) and a full
// generated Copy, Sync exclusive trees so runtime packs cannot keep Unbound
// configured_feature JSON (e.g. r196_flowers after flower blocks were removed).
def generatedExclusiveRuntimeTrees = [
        'data/infx/worldgen',
        'data/infx/neoforge',
        'data/infx/dimension',
        'data/infx/dimension_type',
        'data/minecraft/worldgen',
        'data/minecraft/dimension',
        'data/minecraft/dimension_type',
        'data/minecraft/tags',
]

def copyRuntimeGeneratedResources = tasks.register('copyRuntimeGeneratedResources', Copy) {
    dependsOn tasks.named('runData')
    from layout.projectDirectory.dir('src/generated/resources')
    into layout.buildDirectory.dir('resources/main')
    exclude '.cache/**'
}

def syncExclusiveGeneratedResources = generatedExclusiveRuntimeTrees.collect { relativePath ->
    tasks.register("syncGenerated_${relativePath.replace('/', '_')}", Sync) {
        dependsOn copyRuntimeGeneratedResources
        from layout.projectDirectory.dir("src/generated/resources/${relativePath}")
        into layout.buildDirectory.dir("resources/main/${relativePath}")
        // Destination extras (stale JSON left by prior Copy) must always be pruned.
        outputs.upToDateWhen { false }
    }
}

def prepareRuntimeGeneratedResources = tasks.register('prepareRuntimeGeneratedResources') {
    dependsOn copyRuntimeGeneratedResources
    dependsOn syncExclusiveGeneratedResources
}

// Fresh clones and worktrees do not contain ignored datagen output. Bootstrap it before
// runtime registry reloads so items that reference dynamic registries can load safely.
tasks.named('runClient').configure {
    dependsOn prepareRuntimeGeneratedResources
}

tasks.named('runGameTestServer').configure {
    dependsOn prepareRuntimeGeneratedResources
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
